--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,12 +12,12 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.MusicApplication"
+        android:theme="@style/Theme.MusicSplash"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".MusicAppMainActivity"
             android:exported="true"
-            android:theme="@style/Theme.MusicApplication">
+            android:theme="@style/Theme.MusicSplash">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
